@@ -350,10 +350,10 @@ foreach ($contents as $content) {
 			}
 			
 			if ($content['treport_custom_sql_id'] != 0) {
-				$sql = get_db_value_filter('`sql`', 'treport_custom_sql', array('id' => $content['treport_custom_sql_id']));
+				$sql = safe_output (get_db_value_filter('`sql`', 'treport_custom_sql', array('id' => $content['treport_custom_sql_id'])));
 			}
 			else {
-				$sql = $content['external_source'];
+				$sql = safe_output ($content['external_source']);
 			}
 			
 			$result = get_db_all_rows_sql($sql);
